--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .container {
     max-width: 600px;
     padding: 40px;
-    background-color: #111; /* Dark gray-black background */
+    background-color: #111; /*  gray background */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     text-align: center;
 }
