--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ ul {
 }
 
 li {
-    background-color: #ddd; /* Darker gray background for tasks */
+    background-color: #ddd; /*gray background for tasks */
     margin-bottom: 5px;
     padding: 5px 10px;
 }
